<resources>
    <string name="app_name">MISSION2</string>
    <string name="list">방명록</string>
    <string name="msg">메시지</string>
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="txt">text</string>
    <string name="edTXT" />
    <string name="prr">뽀로로</string>
    <string name="mona">모나리자</string>
    <string name="star">별이 빛나는 밤에</string>
    <string name="mycal">계산기</string>
    <string name="text">0</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
</resources>